# apples2apples

./: .gitignore  Cargo.toml  Config.toml  README.md
crates/actor-macros/: Cargo.toml  README.md
crates/actor-macros/src/: kw.rs  lib.rs
crates/actor-macros/src/ast/: args.rs  mod.rs  pre_start.rs
crates/actor-macros/src/expand/: expand.rs
crates/actor-macros/src/parse/: actor_args.rs
crates/actor-macros/src/validate/: args.rs
crates/core/: Cargo.toml  output.txt
crates/core/src/: lib.rs
crates/core/src/cards/: card.rs  green_card.rs  mod.rs  red_card.rs
crates/core/src/deck/: deck.rs  green_deck.rs  mod.rs  red_deck.rs
crates/core/src/player/: base_player.rs  mod.rs  player.rs
crates/core/src/players/: mod.rs
crates/core/src/protocol/: message.rs
crates/protocol/: CHANGELOG.md  Cargo.toml  output.txt
crates/protocol/src/: codec.rs  error.rs  framed_transport.rs  header.rs  lib.rs  protocol.rs  reader.rs  tcp_transport.rs  transport.rs  writer.rs
crates/protocol/src/tests/: protocol.rs
crates/utils/: Cargo.toml
crates/utils/src/: actor_macro.rs  cli.rs  config.rs  consts.rs  deck_loader.rs  game_mode.rs  lib.rs  setup_tracing.rs
doc/: host.md
examples/: actor_protocol_demo.rs  protocol_demo.rs
src/: client_main.rs  deck_handler.rs  host_main.rs  lib.rs  main.rs
src/actors/: client_fsm.rs  client_player.rs  dealer.rs  host_fsm.rs  mod.rs  player_manager.rs  score_handler.rs  score_manager.rs
src/actors/networking/: acceptor.rs  client_connection.rs  connection.rs  mod.rs  reader.rs  registry.rs  writer.rs
src/actors/players/: bot.rs  human.rs  mod.rs
src/players/: bot_player.rs  human_player.rs  mod.rs
src/tests/: dealer.rs  mod.rs  score_manager.rs
