[package]
name = "apples2apples"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
apples-core = {path = "crates/core"}
apples-protocol = {path = "crates/protocol"}
apples-utils = {path = "crates/utils"}
rand.workspace = true
anyhow = "1.0"
ractor_cluster = { version = "0.15.6", features = ["async-trait"] }
ractor = { version="0.15.6", features = ["async-trait", "serde"] }
ahash = "0.8.12"
serde ={workspace = true}

[workspace]
members = [
    "crates/core",
    "crates/protocol", 
    "crates/utils"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
itertools = "0.12"
