[package]
name = "apples2apples"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
apples-core = {path = "crates/core"}
apples-protocol = {path = "crates/protocol"}
apples-utils = {path = "crates/utils"}
actor-macros = {path = "crates/actor-macros"}
rand.workspace = true
anyhow = "1.0"

ahash = "0.8.12"
serde = {workspace = true}
ractor = { version = "0.15.8", features = ["async-trait" ] }
thiserror = "2.0.16"

[workspace]
members = [
    "crates/core",
    "crates/actor-macros",
    "crates/protocol", 
    "crates/utils"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
itertools = "0.12"
