[package]
name = "apples2apples"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
apples-core = {path = "crates/core"}
apples-protocol = {path = "crates/protocol"}
apples-utils = {path = "crates/utils"}
rand.workspace = true
anyhow = "1.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.10"
serde_json = { workspace = true }

ahash = "0.8.12"
serde = {workspace = true}
ractor = { version = "0.15.8", features = ["tokio_runtime"]  }
thiserror = "2.0.16"
tracing.workspace = true
tracing-subscriber.workspace = true
dsl-ractor = "0.2.0"

[workspace]
members = [
    "crates/core",
    "crates/protocol", 
    "crates/utils"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
itertools = "0.12"
