[package]
name = "apples-protocol"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
bytes = { version = "1.10.1", features = ["serde"] }
serde.workspace = true
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "process", "test-util"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
zerocopy = "0.8.27"
zerocopy-derive = "0.8.27"
